# mnn-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: build-binaries.yml
examples/: async_inference.rs  basic_inference.rs  gpu_backend.rs  image_process.rs  mnn_cv.rs
mnn-sys/: Cargo.toml  README.md  build.rs
mnn-sys/src/: lib.rs
mnn-sys/wrapper/: mnn_module_wrapper.cpp  mnn_module_wrapper.h  mnn_wrapper.cpp  mnn_wrapper.h
src/: async_mod.rs  backend.rs  config.rs  error.rs  image_process.rs  interpreter.rs  lib.rs  runtime.rs  session.rs  tensor.rs  utils.rs
tests/: integration_test.rs
