[workspace]
resolver = "2"
members = ["mnn-sys"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wapznw/mnn-rs"
homepage = "https://github.com/wapznw/mnn-rs"
description = "Rust bindings for Alibaba MNN (Mobile Neural Network) inference engine"
keywords = ["mnn", "neural-network", "inference", "deep-learning", "machine-learning"]
categories = ["api-bindings", "algorithms", "science"]
rust-version = "1.70"
authors = ["DJ.W <wapznw@gmail.com>"]

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1.0", default-features = false }
bindgen = "0.69"
cmake = "0.1"
pkg-config = "0.3"

[package]
name = "mnn-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Safe Rust bindings for Alibaba MNN (Mobile Neural Network) inference engine"
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
authors.workspace = true
documentation = "https://docs.rs/mnn-rs"

[features]
default = ["cpu", "static", "use-prebuilt"]

# Linking method
static = ["mnn-rs-sys/static"]
dynamic = ["mnn-rs-sys/dynamic"]

# Backend support
cpu = ["mnn-rs-sys/cpu"]
cuda = ["mnn-rs-sys/cuda"]
opencl = ["mnn-rs-sys/opencl"]
vulkan = ["mnn-rs-sys/vulkan"]
metal = ["mnn-rs-sys/metal"]

# Precision support
fp16 = ["mnn-rs-sys/fp16"]
bf16 = []
int8 = ["mnn-rs-sys/int8"]

# Quantization
quantization = ["mnn-rs-sys/quantization"]

# x86 SIMD optimizations
sse = ["mnn-rs-sys/sse"]
avx2 = ["mnn-rs-sys/avx2"]
avx512 = ["mnn-rs-sys/avx512"]

# Async support
async = ["dep:tokio"]

# Build options
# Use prebuilt binaries (default) - downloads from GitHub Releases
use-prebuilt = ["mnn-rs-sys/use-prebuilt"]
# Build from source - requires cmake and C++ compiler
build-from-source = ["mnn-rs-sys/build-from-source"]
# Use system-installed MNN
system-mnn = ["mnn-rs-sys/system-mnn"]

# Extended API features
# Image processing support (requires MNN with CV module)
image-process = ["mnn-rs-sys/image-process"]
# Dynamic computation graph support (requires MNN with Expr/Module)
module = ["mnn-rs-sys/module"]
# Multi-session runtime sharing (requires MNN with RuntimeManager)
runtime = ["mnn-rs-sys/runtime"]

# Platform specific (usually auto-detected)
android = ["mnn-rs-sys/android"]
ios = ["mnn-rs-sys/ios"]
embedded = []

[dependencies]
mnn-rs-sys = { path = "mnn-sys", version = "0.1.0", package = "mnn-rs-sys" }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.0"

[package.metadata.docs.rs]
# docs.rs doesn't have network access or cmake, so native library linking is skipped
# in build.rs when DOCS_RS is set. Use minimal features for documentation.
features = ["cpu"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_inference"
required-features = ["cpu"]

[[example]]
name = "async_inference"
required-features = ["async"]

[[example]]
name = "gpu_backend"
required-features = ["cuda"]

[[example]]
name = "image_process"
required-features = ["image-process"]

[[example]]
name = "mnn_cv"
required-features = ["image-process"]