[package]
name = "mnn-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raw FFI bindings for Alibaba MNN (Mobile Neural Network) inference engine"
links = "mnn"

[features]
default = ["cpu", "static"]

# Linking method
static = []
dynamic = []

# Backend support
cpu = []
cuda = []
opencl = []
vulkan = []
metal = []

# Precision support
fp16 = []
int8 = []

# Quantization
quantization = []

# Build options
# Build MNN from source (requires cmake)
build-from-source = ["cmake"]
# Use system-installed MNN
system-mnn = []
# Generate bindings using bindgen
generate-bindings = ["bindgen"]

# Platform specific
android = []
ios = []

[build-dependencies]
bindgen = { workspace = true, optional = true }
cmake = { workspace = true, optional = true }
pkg-config = { workspace = true }
cc = "1.0"
num_cpus = "1.16"

[dependencies]

[package.metadata.docs.rs]
features = ["cpu"]

# Instructions for building from source
[package.metadata.mnn]
# MNN source can be obtained by:
# 1. Set MNN_SOURCE_PATH to point to existing MNN source directory
# 2. Or let the build script clone from GitHub automatically
repository = "https://github.com/alibaba/MNN.git"
default_branch = "master"